Последний рабочий вариант