@@ -1,4 +1,4 @@
-package sia.tacocloud.config;
+package sia.serverauthorization.users;
 
 import lombok.AccessLevel;
 import lombok.Data;
@@ -8,54 +8,52 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import javax.persistence.Entity;
-import javax.persistence.GeneratedValue;
-import javax.persistence.GenerationType;
-import javax.persistence.Id;
+import javax.persistence.*;
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
-@Entity
 @Data
-@NoArgsConstructor(access = AccessLevel.PRIVATE, force = true)
+@Entity
 @RequiredArgsConstructor
-public class Human implements UserDetails {
+@NoArgsConstructor(force = true, access = AccessLevel.PRIVATE)
+public class User implements UserDetails {
+
     private static final long serialVersionUID = 1L;
+    private final String username;
+    private final String password;
+    private final String role;
     @Id
     @GeneratedValue(strategy = GenerationType.AUTO)
     private Long id;
 
-    private final String username;
-    private final String password;
-    private final String fullname;
-    private final String street;
-    private final String city;
-    private final String state;
-    private final String zip;
-    private final String phoneNumber;
-
     @Override
+    @Transient
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority("ROLE_ADMIN"));
+        return Collections.singletonList(new SimpleGrantedAuthority(role));
     }
 
     @Override
+    @Transient
     public boolean isAccountNonExpired() {
         return true;
     }
 
     @Override
+    @Transient
     public boolean isAccountNonLocked() {
         return true;
     }
 
     @Override
+    @Transient
     public boolean isCredentialsNonExpired() {
         return true;
     }
 
     @Override
+    @Transient
     public boolean isEnabled() {
         return true;
     }
+
 }
